# dice

./: pyproject.toml
src/: dice_cli.py
